force-app/main/default/objects/Lead/fields/Assigned_From_Queue__c.field-meta.xml
<CustomField>
    <fullName>Assigned_From_Queue__c</fullName>
    <description>Assigned from queue</description>
    <label>Assigned From Queue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>