force-app/main/default/objects/Lead/fields/Assignment_Seq__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Seq__c</fullName>
    <description>Assignment sequence number</description>
    <label>Assignment_Seq</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>