force-app/main/default/objects/Lead/fields/Q_assign_Custom_Seq__c.field-meta.xml
<CustomField>
    <fullName>Q_assign_Custom_Seq__c</fullName>
    <description>Q-assign custom assign sequence</description>
    <label>Q-assign Custom Seq</label>
    <length>20</length>
    <type>Text</type>
</CustomField>